--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-
-    <body>
+{% block title_block %}
+    Add a Page
+{% endblock %}
+{% block body_block %}
         <h1>Add a Page to {{ category.name }}</h1>
         <div>
-            <form id="page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
+            <form id="page_form" method="post" action="{% url 'rango:add_page' category.slug %}">
                 {% csrf_token %}
                 {% csrf_token %}
                 {% for hidden in form.hidden_fields %}
@@ -17,10 +15,9 @@
                 {% for field in form.visible_fields %}
                     {{ field.errors }}
                     {{ field.help_text }}
-                    {{ field }}
+                    {{ field }}<br />
                  {% endfor %}
                  <input type="submit" name="submit" value="Create Page" />
             </form>
         </div>
-    </body>
-</html>
+{% endblock %}
